hero/k8s/gateway/gateway-deployments.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gateway
spec:
  paused: true
  template:
    metadata:
      labels:
        app: surging-hero
        component: gateway
    spec:
      imagePullSecrets:
      - name: registry-key
      containers:
      - name: gateway
        image: surgingcloud/surging.hero.gateway
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http-port
